# test-gettext

./: CMakeLists.txt  test_intl.c  update-locale.sh
.github/workflows/: test-build.yml
locale/de/LC_MESSAGES/: test_intl.mo
po/: test_intl.de.po  test_intl.po  test_intl.pot
